syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.fossa";

import "common.proto";
import "google/protobuf/wrappers.proto";

message AnswerQuestionRequest {
    string id = 1;
    string userId = 2;
    string answer = 3;
    bool publicVisible = 4;
    repeated string visibleMembershipIds = 5;
}

message CommonResponse {
    CommonStatus status = 1;
}

message CreateOrUpdateBoxRequest {
    string islandId = 1;
    bool enabled = 2;
    repeated string membershipIds = 3;
}

message CreateOrUpdateBoxResponse {
    CommonStatus status = 1;
    BoxMessage message = 2;
}

message BoxMessage {
    string id = 1;
    string island = 2;
    bool enabled = 3;
    repeated string membershipIds = 4;
}

service BoxService {
    rpc AnswerQuestion (AnswerQuestionRequest) returns (CommonResponse){}
    rpc PutBox (CreateOrUpdateBoxRequest) returns (CreateOrUpdateBoxResponse) {}
}